2009-02-16  Robin Stocker  <robin@nibor.org>

	reviewed by: Philip Withnall <philip@tecnocode.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c: Remove unused fields of
	BaconVideoWidgetPrivate (Closes: #571888)

2009-02-12  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_get_metadata_string): Fix possible crasher
	when the string is NULL (Closes: #571480)

2009-02-11  Philip Withnall  <philip@tecnocode.co.uk>

	Update svn:ignore properties.

2009-02-11  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.py: Imported gettext in YouTube plugin
	to ensure messages are translated.

2009-02-11  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/screensaver/totem-screensaver.c (impl_activate),
	(impl_deactivate): Fix warning on exit

2009-02-11  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/opensubtitles/opensubtitles.py: Add 50-odd
	languages supported by Opensubtitles (Closes: #571132)

2009-02-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-object.c: Fix retval type (gboolean, not int)

2009-02-11  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/opensubtitles/opensubtitles.py: Added Portuguese to the
	list of queryable OpenSubtitles languages. (Helps: #571132)

2009-02-10  Philip Withnall  <philip@tecnocode.co.uk>

	* src/eggfileformatchooser.h: Fixed to use single includes for GTK+.
	(Closes: #568337)

2009-02-09  Philip Withnall  <philip@tecnocode.co.uk>

	* browser-plugin/totem-plugin-viewer.c
	(totem_embedded_open_internal), (totem_embedded_set_window):
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_get_mrls), (bacon_video_widget_can_get_frames),
	(bacon_video_widget_new):
	* src/backend/bacon-video-widget-xine.c (xine_try_error),
	(bacon_video_widget_new), (bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_get_mrls), (bacon_video_widget_can_get_frames):