@@ -1,3 +1,12 @@
+2009-02-16  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plugins/properties/bacon-video-widget-properties.c:
+	* src/plugins/properties/bacon-video-widget-properties.h:
+	* src/plugins/properties/totem-movie-properties.c
+	(totem_movie_properties_plugin_metadata_updated): Patch from
+	Robin Stocker <robin@nibor.org> to display metadata again
+	after recent changes (Closes: #570830)
+
 2009-02-16  Robin Stocker  <robin@nibor.org>
 
 	reviewed by: Philip Withnall <philip@tecnocode.co.uk>
